--- a/css/styles.css
+++ b/css/styles.css
@@ -6,13 +6,22 @@ h1 {
 }
 
 .person {
-	text-overflow: ellipsis;
-	overflow: hidden;
-	white-space: nowrap;
+	border: 1px solid #ddd;
+	border-radius: 3px;
+	margin-bottom: 30px;
+	width: 168px;
 }
 
 	.photo > img {
 		max-width: 100%;
+		box-shadow: inset 0 0 1px rgba(255,255,255, 0.3333);
+	}
+	
+	.nametag {
+		padding: 0 5px;
+		overflow: hidden;
+		text-overflow: ellipsis;
+		white-space: nowrap;
 	}
 
 	.nametag h6 {
