--- a/css/styles.css
+++ b/css/styles.css
@@ -13,13 +13,18 @@ h1 {
 	width: 168px;
 }
 
-	.photo > img {
-		max-width: 100%;
-		box-shadow: inset 0 0 1px rgba(255,255,255, 0.3333);
+	.photo {
+		background-color: black;
+		background-position: center center;
+		background-size: cover;
+		box-shadow: inset 0 0 17px 0px rgba(0,0,0, 0.5);
+		width: 168px;
+		height: 130px;
+		overflow: hidden;
 	}
 	
 	.nametag {
-		padding: 0 5px;
+		padding: 7px 7px 2px;
 		overflow: hidden;
 		text-overflow: ellipsis;
 		white-space: nowrap;
