--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,8 @@ h1 {
 		background-color: black;
 		background-position: center center;
 		background-size: cover;
+		border-top-left-radius: 3px;
+		border-top-right-radius: 3px;
 		box-shadow: inset 0 0 17px 0px rgba(0,0,0, 0.5);
 		width: 168px;
 		height: 130px;
@@ -31,10 +33,12 @@ h1 {
 	}
 
 	.nametag h6 {
+		color: #888;
 		display: inline;
 	}
 
 	.nametag img {
+		border-radius: 2px;
 		height: 24px;
 		width: 24px;
 	}
