--- a/css/styles.css
+++ b/css/styles.css
@@ -9,7 +9,6 @@ h1 {
 .person {
 	border: 1px solid #ddd;
 	border-radius: 3px;
-	cursor: pointer;
 	margin-bottom: 30px;
 	width: 168px;
 }
@@ -20,11 +19,13 @@ h1 {
 		background-size: cover;
 		border-top-left-radius: 3px;
 		border-top-right-radius: 3px;
-		box-shadow: inset 0 0 17px 0px rgba(0,0,0, 0.5);
+		box-shadow: inset 0 0 23px 0 rgba(0,0,0, 0.25);
 		width: 168px;
 		height: 130px;
 		overflow: hidden;
 	}
+	
+		.photo.clickable { cursor: pointer; }
 	
 	.nametag {
 		padding: 7px 7px 2px;
